Migracao da base de dados por motivos da criacao da nova tabela Building BuildingDAOTest
BuildingController
         -criacao do saveBuilding
         -create isThereBuilding

RoomController
         -criacao do isThereRoom

ChooseBtScreenActivity
ConfigScreenActivity
RoomMatrixScreenActivity

choose_bt_screen.xml
config_screen.xml
room_matrix_screen.xml

adicionei uma nova actividade ao manifesto

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,19 @@
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+
+    //config_bt_screen
+    <string name="btn_delete">Delete</string>
+    <string name="room">Room: </string>
+    <string name="building">Building: </string>
+    <string name="size">Size:</string>
+    <string name="title">RSSI BT</string>
+    <string name="room_width">width</string>
+    <string name="room_height">height</string>
+
+
+    //choose_bt_screen
+    <string name="building_name"></string>
+    <string name="room_name"></string>
+
 </resources>
