Segue um novo mundo de alteracoes e pequenas complicacoes Lembrar:    adicionei alguns buildings no testbuilding para testar    alteracoes no buildingdomain para retornar uma list de strings
A parte d einterface(View) esta' tudo novo e e' ai que surgem as complicacoes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,10 +12,12 @@
     <string name="title">RSSI BT</string>
     <string name="room_width">width</string>
     <string name="room_height">height</string>
+    <string name="btn_next">Next</string>
 
 
     //choose_bt_screen
     <string name="building_name"></string>
     <string name="room_name"></string>
+    <string name="title_activity_get_intent_extra">GetIntentExtraActivity</string>
 
 </resources>
