Funcionam parcialmente os dois 1os screens e vao buscar o que e' necessario 'a base de dados

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,5 +19,8 @@
     <string name="building_name"></string>
     <string name="room_name"></string>
     <string name="title_activity_get_intent_extra">GetIntentExtraActivity</string>
+    <string name="title_activity_building">BuildingActivity</string>
+    <string name="title_activity_room">RoomActivity</string>
+    <string name="title_activity_bt">BTActivity</string>
 
 </resources>
